--- a/src/app/stars/stars.component.html
+++ b/src/app/stars/stars.component.html
@@ -1,5 +1,6 @@
 <ul class="tab-details">
-    <li class="row" *ngFor="let stars of starsDetails">
+    <li *ngFor="let stars of starsDetails">
+    <div class="row">    
         <div class="col-10 col-lg-9 d-inline-block">
             <span><h5><a href="{{stars.html_ur}}">{{stars.full_name}}</a></h5></span>
             <span>{{stars.description}}</span>
@@ -29,6 +30,7 @@
             <button class="btn btn-sm">
                 <svg class="mr-1 align-text-bottom" viewBox="0 0 14 16" version="1.1" width="14" height="16" aria-hidden="true"><path fill-rule="evenodd" d="M14 6l-4.9-.64L7 1 4.9 5.36 0 6l3.6 3.26L2.67 14 7 11.67 11.33 14l-.93-4.74L14 6z"></path></svg>Star
             </button>
-        </div>  
+        </div> 
+    </div>     
     </li>
 </ul>
