--- a/src/app/following/following.component.html
+++ b/src/app/following/following.component.html
@@ -5,7 +5,20 @@
                 <a href="{{item.html_url}}"><img class="avatar" height="50" width="50" src="{{item.avatar_url}}"/></a>
             </div>
             <div class="d-table-cell col-8 col-md-9 col-lg-9 col-xl-9 v-align-top pr-3">
-                <span>{{item.login}}</span>
+                <span *ngIf="item.userData.login">{{item.userData.login}}</span>
+                <div class="">
+                    <p>{{item.userData.bio}}</p>
+                </div>
+                <div class="d-flex">
+                    <span *ngIf="item.userData.company">
+                        <svg class="mr-1 align-text-bottom" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path fill-rule="evenodd" d="M16 12.999c0 .439-.45 1-1 1H7.995c-.539 0-.994-.447-.995-.999H1c-.54 0-1-.561-1-1 0-2.634 3-4 3-4s.229-.409 0-1c-.841-.621-1.058-.59-1-3 .058-2.419 1.367-3 2.5-3s2.442.58 2.5 3c.058 2.41-.159 2.379-1 3-.229.59 0 1 0 1s1.549.711 2.42 2.088C9.196 9.369 10 8.999 10 8.999s.229-.409 0-1c-.841-.62-1.058-.59-1-3 .058-2.419 1.367-3 2.5-3s2.437.581 2.495 3c.059 2.41-.158 2.38-1 3-.229.59 0 1 0 1s3.005 1.366 3.005 4z"></path></svg>
+                        {{item.userData.company}}
+                    </span>
+                    <span *ngIf="item.userData.location"> 
+                        <svg class="mr-1 align-text-bottom" viewBox="0 0 12 16" version="1.1" width="12" height="16" aria-hidden="true"><path fill-rule="evenodd" d="M6 0C2.69 0 0 2.5 0 5.5 0 10.02 6 16 6 16s6-5.98 6-10.5C12 2.5 9.31 0 6 0zm0 14.55C4.14 12.52 1 8.44 1 5.5 1 3.02 3.25 1 6 1c1.34 0 2.61.48 3.56 1.36.92.86 1.44 1.97 1.44 3.14 0 2.94-3.14 7.02-5 9.05zM8 5.5c0 1.11-.89 2-2 2-1.11 0-2-.89-2-2 0-1.11.89-2 2-2 1.11 0 2 .89 2 2z"></path></svg>
+                        {{item.userData.location}}
+                    </span>
+                </div>    
             </div> 
             <div class="d-table-cell col-2 v-align-top text-right">
                 <button class="btn btn-sm">Follow</button>
