--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,7 +2,7 @@
 body{
     background-color: #fff;
     color: #24292e;
-    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     font-size: 14px;
     line-height: 1.5;
   }
@@ -16,11 +16,11 @@ body{
   .bg-dark {
     background-color: #24292E !important;
   }
-  
+
   .container-fluid svg{
     fill: #6A737D;
   }
-  
+
   .navbar-dark .navbar-nav .nav-link , .navbar-brand{
     color: #fff !important;
     font-weight: 600;
@@ -32,7 +32,7 @@ body{
     fill: #BEBFC1;
     cursor: pointer;
   }
-  
+
   .dropdown-menu.show::after
   {
     content: "";
@@ -44,7 +44,7 @@ body{
       right: 9px;
       top: -16px;
   }
-  
+
   .dropdown-item{
     color: #24292e;
     display: block;
@@ -59,7 +59,7 @@ body{
     color: #fff;
     outline: none;
   }
-  
+
   .avatar {
     border-radius: 3px;
     display: inline-block;
@@ -67,12 +67,12 @@ body{
     overflow: hidden;
     vertical-align: middle;
   }
-  
+
   .vcard-fullname {
     font-size: 26px;
     line-height: 30px;
   }
-  
+
   .vcard-username {
     color: #666;
     font-size: 20px;
@@ -80,7 +80,7 @@ body{
     font-weight: 300;
     line-height: 24px;
   }
-  
+
   .vcard-details {
     list-style: none;
     padding: 0px;
@@ -89,14 +89,14 @@ body{
     right:0;
     left: auto;
   }
-  
+
   .btn{
     background-color: #eff3f6;
     background-image: linear-gradient(-180deg,#fafbfc,#eff3f6 90%);
     color: #24292e;
     border: 1px solid rgba(27,31,35,.2);
   }
-  
+
   /* Search Start */
   .search{
     background-color: hsla(0,0%,100%,.125);
@@ -109,7 +109,7 @@ body{
     -webkit-transition: width 0.4s ease-in-out;
     transition: width 0.4s ease-in-out;
   }
-  
+
   .search .input-sm{
     background: none;
     border: 0;
@@ -140,7 +140,7 @@ body{
     list-style: none;
     padding: 0;
   }
-  
+
   .suggestion ul li{
     color: #24292e;
     border: 1px solid #e1e4e8;
@@ -152,7 +152,7 @@ body{
     border-bottom-left-radius: 3px;
     border-bottom-right-radius: 3px;
   }
-  
+
   .suggestion ul li:hover{
     color: #fff !important;
     fill: #fff;
@@ -160,7 +160,7 @@ body{
     border: 1px solid #0366D6;
     outline: none;
   }
-  
+
   .search.active, .suggestion.active {
     background-color: white;
     width: 470px;
@@ -172,21 +172,21 @@ body{
   .search.active .input-sm{
     width: 435px;
   }
-  
+
   .search.active{
     border-bottom-left-radius: 0px;
     border-bottom-right-radius: 0px;
   }
-  
+
   /* Search end */
-  
+
   .sticky {
     position: fixed;
     top: 0;
     width: 71%;
     z-index: 1020;
   }
-  
+
   #profile-scroll{
     background-color: #fff;
     font-weight: 600;
@@ -198,15 +198,15 @@ body{
     background-color: #fff;
     border-bottom: 1px solid #dee2e6;
   }
-  
+
   .show{
     display: block;
   }
-  
+
   .hide{
     display: none;
   }
-  
+
   .year-btn button{
     margin-top: 10px;
     border-radius: 3px !important;
@@ -277,7 +277,7 @@ body{
     border-bottom: 2px solid #e36209 !important;
     font-weight: 600;
   }
-  
+
   .tabs .badge-secondary{
     background-color: rgba(27,31,35,.08);
     border-radius: 20px;
@@ -381,7 +381,7 @@ body{
     width: 100%;
   }
   /* Tabs End */
-  
+
   /* Footer style starts here */
   footer{
     padding: 16px!important;
@@ -436,7 +436,7 @@ body{
       left: 0px;
       padding-left: 14px;
     }
-  
+
     .search{
       width: 100% !important;
       display: -webkit-box;
@@ -453,11 +453,11 @@ body{
       top: 85px;
       left: 16px;
     }
-  
+
     #profile-scroll{
       padding-left: 14px !important;
     }
-    
+
     .tab-details-pinned div{
       display: block !important;
     }
@@ -483,4 +483,3 @@ body{
     padding-right: 0;
   }
 }
-  
